--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
+    "axios": "^1.7.7",
+    "browser": "^0.2.6",
+    "dom": "^0.0.3",
+    "react": "^18.3.1",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "router": "^1.3.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
